--- a/images/github-runner/Dockerfile
+++ b/images/github-runner/Dockerfile
@@ -10,6 +10,7 @@ RUN set -eux ; \
             curl \
             wget \
             build-essential \
+            cmake \
             git \
             python3-pip \
             python3-venv \
